; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_et-forest.c_et_new_occ.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_et-forest.c_et_new_occ.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.et_occ = type { i64, %struct.et_occ*, i64, i32*, i32*, i32*, %struct.et_node* }
%struct.et_node = type { i32 }

@et_occurrences = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [12 x i8] c"et_occ pool\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.et_occ* (%struct.et_node*)* @et_new_occ to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.et_occ* @et_new_occ(%struct.et_node* %0) #0 {
  %2 = alloca %struct.et_node*, align 8
  %3 = alloca %struct.et_occ*, align 8
  store %struct.et_node* %0, %struct.et_node** %2, align 8
  %4 = load i64, i64* @et_occurrences, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %8, label %6

6:                                                ; preds = %1
  %7 = call i64 @create_alloc_pool(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 56, i32 300)
  store i64 %7, i64* @et_occurrences, align 8
  br label %8

8:                                                ; preds = %6, %1
  %9 = load i64, i64* @et_occurrences, align 8
  %10 = call %struct.et_occ* @pool_alloc(i64 %9)
  store %struct.et_occ* %10, %struct.et_occ** %3, align 8
  %11 = load %struct.et_node*, %struct.et_node** %2, align 8
  %12 = load %struct.et_occ*, %struct.et_occ** %3, align 8
  %13 = getelementptr inbounds %struct.et_occ, %struct.et_occ* %12, i32 0, i32 6
  store %struct.et_node* %11, %struct.et_node** %13, align 8
  %14 = load %struct.et_occ*, %struct.et_occ** %3, align 8
  %15 = getelementptr inbounds %struct.et_occ, %struct.et_occ* %14, i32 0, i32 5
  store i32* null, i32** %15, align 8
  %16 = load %struct.et_occ*, %struct.et_occ** %3, align 8
  %17 = getelementptr inbounds %struct.et_occ, %struct.et_occ* %16, i32 0, i32 4
  store i32* null, i32** %17, align 8
  %18 = load %struct.et_occ*, %struct.et_occ** %3, align 8
  %19 = getelementptr inbounds %struct.et_occ, %struct.et_occ* %18, i32 0, i32 3
  store i32* null, i32** %19, align 8
  %20 = load %struct.et_occ*, %struct.et_occ** %3, align 8
  %21 = getelementptr inbounds %struct.et_occ, %struct.et_occ* %20, i32 0, i32 2
  store i64 0, i64* %21, align 8
  %22 = load %struct.et_occ*, %struct.et_occ** %3, align 8
  %23 = load %struct.et_occ*, %struct.et_occ** %3, align 8
  %24 = getelementptr inbounds %struct.et_occ, %struct.et_occ* %23, i32 0, i32 1
  store %struct.et_occ* %22, %struct.et_occ** %24, align 8
  %25 = load %struct.et_occ*, %struct.et_occ** %3, align 8
  %26 = getelementptr inbounds %struct.et_occ, %struct.et_occ* %25, i32 0, i32 0
  store i64 0, i64* %26, align 8
  %27 = load %struct.et_occ*, %struct.et_occ** %3, align 8
  ret %struct.et_occ* %27
}

declare dso_local i64 @create_alloc_pool(i8*, i32, i32) #1

declare dso_local %struct.et_occ* @pool_alloc(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
